align issue of column info

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -19,3 +19,11 @@
 .float-right {
     float: right;
 }
+
+.margin-left-50px {
+    margin-left: 50px;
+}
+
+.container {
+    padding: 0px;
+}
